// 语法结构，使用pb3
 syntax = "proto3";
  // 定义命名空间，一般是项目名或者解决方案名
 //option csharp_namespace = "SmartLibrary.News.Application";
  // 定义服务的包
 package SmartLibraryNews;
 
 
 // 定义具体的服务
 service NewsGrpcService {
    // 定义某一个方法API，格式是：rpc 方法名(请求参数对象名) returns(返回参数对象名)
    rpc GetNewsColumn (NewsColumnRequest) returns (NewsColumnReply);
 }
 
  // 定义请求的对象名
 message NewsColumnRequest {
    string plateId = 1;
    string searchKey = 2;
 }
 
  // 定义返回的对象名
 message NewsColumnReply {
    // 有一个返回的字段是message
    string id = 1;
    string title = 2;
    string label = 3;
 }
